# mcp-registrar

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.reference/: comai
docs/: architecture_overview.md  mcp_reference.md  mcp_stdio_porting_guide.md  module-api.md  rust_guide.md
public/images/: mcp_architecture  task_lifecycle
scripts/: images.py  key_tools.py  key_tools.sh  launch.sh  mcp_client.py  mcp_client_sdk.py  register_module.sh  source_keys.sh
src/: error.rs  lib.rs  main.rs  monitoring.rs
src/cli/: cli_parser.rs  mod.rs
src/config/: env.rs
src/models/: mod.rs  prompt.rs  resource.rs  server.rs  task.rs  tool.rs
src/servers/: mcp_registrar.rs  mod.rs  prompt_registry.rs  resource_registry.rs  server_loader.rs  task_executor.rs  task_scheduler.rs  text_generator.rs  tool_invoker.rs  tool_registry.rs
src/servers/tool_runtime/: manifest.rs  mod.rs
src/servers/tool_runtime/executors/: process.rs  wasm.rs
src/transport/: http_transport.rs  mcpserver.rs  middleware.rs  mod.rs  sse_transport.rs  stdio_transport.rs
src/utils/: chain.rs  chain_rpc.rs  config.rs  error.rs  ipfs.rs  logging.rs  metadata.rs  mod.rs  module_cache.rs  task_storage.rs  tool_storage.rs
tests/: chain_index_file_tests.rs  echo_integration.rs  mcp_gateway_e2e.rs  mcp_gateway_prompts_resources_e2e.rs  registrar_tests.rs  resource_registry_tests.rs  run_individual_tests.sh  tool_registry_tests.rs  tool_storage_tests.rs  transport_tests.rs  wasm_tool_tests.rs
tools/echo/: echo.py  tool.json
tools/echo_python/: echo.py  tool.json
tools/registry/: tool.json
