[package]
name = "registry-scheduler"
version = "0.1.0"
edition = "2021"

[features]
default = []
dev_simulate = []
chain-rpc = []

[dependencies]
rmcp = { path = "../rust-sdk/crates/rmcp", version = "0.1.5", features = ["transport-io", "transport-async-rw"] }
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_derive = "1.0"
serde_json = "1.0"
async-trait = "0.1"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.4", features = ["v4"] }
cron = "0.12"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
tempfile = "3.19.1"
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "rustls-tls", "multipart", "blocking"] }
wasmtime = { version = "16", default-features = false, features = ["async", "wat", "cranelift"] }
wasmtime-wasi = "16"
jsonschema = "0.17"
cap-std = "3"
walkdir = "2"
sha2 = "0.10"
base64 = "0.22"
bs58 = "0.5"
schnorrkel = { version = "0.10", default-features = false, features = ["std", "u64_backend"] }
blake2 = "0.10"
once_cell = "1.19"
subxt = { version = "0.44" }
subxt-signer = { version = "0.44" }
hex = "0.4"
wat = "1.0"

[[bin]]
name = "mcp-registrar"
path = "src/bin/mcp_registrar.rs"

[[bin]]
name = "mcp_gateway"
path = "src/bin/mcp_gateway.rs"

[[bin]]
name = "tool-registry"
path = "src/bin/tool_registry.rs"

[[bin]]
name = "resource-registry"
path = "src/bin/resource_registry.rs"

[[bin]]
name = "prompt-registry"
path = "src/bin/prompt_registry.rs"

[[bin]]
name = "task-scheduler"
path = "src/bin/task_scheduler.rs"

[[bin]]
name = "registry-scheduler"
path = "src/main.rs"

[[bin]]
name = "text-generator"
path = "src/bin/text_generator.rs"

[dev-dependencies]
tokio-test = "0.4"
